# last30days-skill

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  HERMES_SETUP.md  README.md  SKILL.md  gemini-extension.json  pyproject.toml  release-notes.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: release.yml
commands/: last30days.md
data/: upstream-watcher-state.json
docs/plans/: 2026-03-08-fix-skill-md-save-section-regression-plan.md  (+2 more)
fixtures/: polymarket_sample.json
hooks/scripts/: check-config.sh
scripts/: build-skill.sh  compare.sh  evaluate_search_quality.py  last30days.py  sync.sh  upstream-update-check.py  verify_v3.py
tests/: test_adversarial_v3.py  test_bird_x.py  test_bluesky.py  test_briefing_v3.py  test_categories.py  test_category_integration.py  test_cli_competitors.py  test_cli_v3.py  test_cluster_v3.py  test_competitors_resolve_integration.py  test_dates_v3.py  test_dedupe_v3.py  test_entity_extract_v3.py  test_env_cookies.py  test_env_v3.py  test_evaluator_v3.py  test_exa_search.py  test_fusion_v3.py  test_generate_synthesis_inputs_v3.py  test_github.py  test_grounding_v3.py  test_hackernews.py  test_http_v3.py  test_instagram.py  test_internals_v3.py  test_normalize_v3.py  test_pipeline_v3.py  test_planner_quiet_mode.py  test_planner_v3.py  test_polymarket.py  test_providers_v3.py  test_quality_nudge.py  test_query_type.py  test_query_v3.py  test_reddit.py  test_reddit_public.py  test_regression.py  test_relevance_core_v3.py  test_render_comparison_multi.py  test_render_v3.py  (+18 more)
(+11 files in other folders)
